--- a/nav.css
+++ b/nav.css
@@ -58,7 +58,7 @@
 
 .link {
   text-decoration: none;
-  font-size: 1.25rem;
+  font-size: 1rem;
   color: #333333;
   margin-left: 1.25rem;
   padding: 0px 2px;
@@ -77,4 +77,10 @@
 
 .link:active {
   opacity: 0.5;
+}
+
+@media screen and (min-width: 2000px) {
+  .link {
+    font-size: 1.25rem;
+  }
 }
