--- a/general.css
+++ b/general.css
@@ -3,6 +3,7 @@ body {
   font-family: Roboto, Arial, Helvetica, sans-serif;
   color: #333333;
   background-color: #f5f5f5;
+  /* font-weight: 300; */
 }
 
 p {
