--- a/nav.css
+++ b/nav.css
@@ -21,7 +21,7 @@
   border-width: 2px;
   font-size: 2rem;
   padding: 0 0.375rem;
-  height: 3.5rem;
+  height: 3.25rem;
 }
 
 .nav-name-title {
@@ -63,16 +63,15 @@
   margin-left: 1.25rem;
   padding: 0px 2px;
   transition: box-shadow 0.15s, opacity 0.15s;
-  padding-bottom: 1px;
+  padding-bottom: 3px;
 }
 
 .current {
-  /* box-shadow: inset 0 -3px 0 0 rgba(118, 226, 226, 0.75); */
-  box-shadow: inset 0 -3px 0 0 rgb(0, 164, 164);
+  box-shadow: inset 0 -3px 0 0 rgba(24, 69, 59, 0.75);
 }
 
 .link:hover {
-  box-shadow: inset 0 -3px 0 0 rgb(0, 164, 164);
+  box-shadow: inset 0 -3px 0 0 rgba(24, 69, 59, 0.75);
 }
 
 .link:active {
