--- a/styles/general.css
+++ b/styles/general.css
@@ -3,27 +3,22 @@ body {
   font-family: Roboto, Arial, Helvetica, sans-serif;
   color: #333333;
   background-color: #f5f5f5;
-  /* font-weight: 300; */
-}
-
-p {
-  margin: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .margin-container {
+  width: 100%;
   max-width: 1200px;
-  margin: 0 auto;
+  height: 100%;
 }
 
 .break {
   border-bottom: solid;
   border-width: 1px;
   border-color: rgba(0, 0, 0, 0.25);
-  margin-bottom: 1rem;
-  margin-right: 1rem;
-  margin-left: 1rem;
-}
-
-.coming-soon img {
-  width: 100%;
+  margin: 1rem;
+  margin-bottom: 1.5rem;
 }
