--- a/styles/landing.css
+++ b/styles/landing.css
@@ -1,9 +1,16 @@
 body {
-  background-image: url("LCPV1537_crop.JPG");
+  background-image: url("/resources/LCPV1537_crop.JPG");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom center;
   height: 100vh;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
+  color: #333333;
+  background-color: #f5f5f5;
+}
+
+p {
+  margin: 0;
 }
 
 .margin-container {
@@ -64,8 +71,6 @@ body {
 
 .nav-right {
   text-align: center;
-  /* margin-top: 1rem; */
-  /* line-height: 3rem; */
 }
 
 .quote-container {
@@ -78,6 +83,7 @@ body {
   z-index: 0;
   font-family: Noto Sans;
   font-weight: 500;
+  opacity: 0.85;
 }
 
 .quote p {
@@ -99,7 +105,7 @@ body {
 
 @media screen and (max-width: 768px) {
   #background-id {
-    background-image: url("small-background.png");
+    background-image: url("/resources/small-background.png");
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
